--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,14 @@
     "skipLibCheck": true,
     "paths": {
       "@/*": [
-        "src/*"
+        "./*"
       ]
     }
-   
   },
   "include": [
-    "src/*.ts",
-    "src/**/*.ts"
+    "./*.ts",
+    "./**/*.ts",
+    "Calendar.ts"
   ],
   "exclude": [
     "node_modules"
